HTML layout established, pending functionality assessment

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div class="book-list">
             <div class="book">
               <div class="book__cover">
-                <div class="Book__cover--container">
+                <div class="book__cover--container">
                   <h3>User's Name</h4>
                     <p><b>Book Title:</b>title</p>
                     <p><b>Author:</b> author__name</p>
