Javascript functional, likely API URL error

--- a/books.html
+++ b/books.html
@@ -16,10 +16,12 @@
           <label class="book__search--label">
             Search by Title
           </label>
-          <input type="text" placeholder="1" onchange="onSearchChange(event)">
+          <input type="text" class ='book__search--temp' placeholder="1">
+          <button onclick="renderAuth()">Search</button>
         </div>
       </div>
       <div class="book-list">
+
         <div class="book">
           <div class="book__title">
             Book Title
