finalized search Function

--- a/books.html
+++ b/books.html
@@ -10,14 +10,14 @@
 <body>
     <div class="book__search">
         <a href="/index.html">
-          <button>← Back</button>
+          <!-- // back button -->
         </a>
         <div class="book__search--container">
           <label class="book__search--label">
-            Search by Title
+            Search by Title, or Author!
           </label>
-          <input type="text" class ='book__search--temp' placeholder="1">
-          <button onclick="renderAuth()">Search</button>
+          <input type="text" class ='book__search--temp' placeholder="search">
+          <button class= "btn" onclick="renderAuth()">Search</button>
         </div>
       </div>
       <div class="book-list">
